--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "bms-push-notifications",
   "dependencies": {
-      "request": ">=2.0.0",
+      "request": ">=2.0.0"
+  },
+  "devDependencies": {
       "underscore": ">=1.0.0",
       "mocha": ">=2.0.0",
       "chai": ">=3.0.0"
