[Code review] Renamed library from 'bms-push-notifications' --> 'bluemix-push-notifications'

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "bms-push-notifications",
+  "name": "bluemix-push-notifications",
   "dependencies": {
-      "request": ">=2.0.0"
+      "request": ">=2.0.0",
+      "cfenv": ">=1.0.0"
   },
   "devDependencies": {
       "underscore": ">=1.0.0",
