--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
   "devDependencies": {
       "underscore": ">=1.0.0",
       "mocha": ">=2.0.0",
+      "istanbul": "^0.4.4",
+      "coveralls": "2.11.15",
       "chai": ">=3.0.0"
   },
   "version": "0.2.0",
   "description": "Library for sending push notifications via Bluemix Push Notifications services",
   "main": "./lib/PushNotifications.js",
   "scripts": {
-    "test": "mocha"
+    "test": "istanbul cover _mocha -- -R spec"
   },
   "repository": {
     "type": "git",
