Added additional settings options for APNS and GCM and also added optional settings for Web (Chrome,Firefox etc.) to support the latest Push Server features (#9)
* Svkrish #349 (#2)

enhancements to support userId based notificaitons : refer#351

* New functionality add for firefox, safari, chrome and chromeAppExt

* Corrected appGuid code

* Builder pattern changes

* Some minor documentation changes

* Added deprecate module to package.json

* TestCases

* Readme

* Updated npm versions in travis

* Doc Modification

* Modified Readme

* Doc Changes

* For review comments

* Final Changes

* README

* Review changes

* Review Changes

* Review Changes

* Review Changes

* Review Changes

* README

* Comments

* PushMessageModel

* README

* README

* doc

* Remove colon

* Add colons back for codacy

* Review Changes

* Review Changes

* Changes

* README Update

* Node SDK Review

* Added Frankfurt Regioin

* Review

* Review

* Review

* Review

* Review

* Review

* Review

* Review

* README.md

* Reveiw

* Change version

* Doc Review Comments

* Review

* Review

* Review

* version

* Version

* Review

* Review

* Review

* Review

* Review

* Review

* Review

* Review

* Review

* Review

* Review

* Review

* Review

* Review

* Review

* Review

* Review

* Review

* Review

* Review

* Review

--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "bluemix-push-notifications",
   "dependencies": {
-      "request": ">=2.0.0",
-      "cfenv": ">=1.0.0"
+    "cfenv": ">=1.0.0",
+    "chai": "^4.0.1",
+    "chain": "^0.1.3",
+    "deprecate": ">=1.0.0",
+    "mocha-steps": "^1.0.2",
+    "request": ">=2.0.0"
   },
   "devDependencies": {
-      "underscore": ">=1.0.0",
-      "mocha": ">=2.0.0",
-      "istanbul": "^0.4.4",
-      "coveralls": "2.11.15",
-      "chai": ">=3.0.0"
+    "underscore": ">=1.0.0",
+    "mocha": ">=2.0.0",
+    "istanbul": "^0.4.4",
+    "coveralls": "2.11.15",
+    "chai": ">=3.0.0"
   },
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Library for sending push notifications via Bluemix Push Notifications services",
   "main": "./lib/PushNotifications.js",
   "scripts": {
