--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bluemix-push-notifications",
+  "name": "IBM-push-notifications",
   "dependencies": {
     "cfenv": ">=1.0.0",
     "request": ">=2.0.0"
@@ -11,8 +11,8 @@
     "coveralls": "2.11.15",
     "chai": ">=3.0.0"
   },
-  "version": "0.3.1",
-  "description": "Library for sending push notifications via Bluemix Push Notifications services",
+  "version": "0.3.2",
+  "description": "Library for sending push notifications via IBM Cloud Push Notifications services",
   "main": "./lib/PushNotifications.js",
   "scripts": {
     "test": "istanbul cover _mocha -- -R spec"
@@ -22,7 +22,7 @@
     "url": "git+https://github.com/ibm-bluemix-mobile-services/bms-pushnotifications-serversdk-nodejs.git"
   },
   "keywords": [
-    "bluemix",
+    "IBM Cloud",
     "push"
   ],
   "author": "IBM",
