--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "request": ">=2.0.0"
   },
   "devDependencies": {
-    "underscore": ">=1.0.0",
-    "mocha": ">=2.0.0",
+    "chai": ">=3.0.0",
+    "coveralls": "^3.1.1",
     "istanbul": "^0.4.4",
-    "coveralls": "2.11.15",
-    "chai": ">=3.0.0"
+    "mocha": ">=2.0.0",
+    "underscore": ">=1.0.0"
   },
   "version": "1.0.0",
   "description": "Library for sending push notifications via IBM Cloud Push Notifications services",
